--- a/.htaccess
+++ b/.htaccess
@@ -7,6 +7,6 @@ RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /rebow/index.php [L]
+Header set Access-Control-Allow-Origin "*"
 </IfModule>
-
 # END WordPress
